[[bin]]
name = "Mountain"
path = "Source/Library.rs"

[build-dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134" }
toml = { version = "0.8.19" }
tauri-build = { version = "2.0.4", features = ["config-json5"] }
json5 = { version = "0.4.1" }

[dependencies]
async-trait = "0.1.85"
futures = { version = "0.3.31" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134" }
tokio = { version = "1.42.0" }
tokio-tungstenite = "0.26.1"
portpicker = { version = "0.1.1" }
regex = { version = "1.11.1" }

tauri = { version = "2.2.0", features = ["tray-icon", "config-json5"] }

tauri-plugin-authenticator = "2.0.0-rc.1"
tauri-plugin-autostart = "2.2.0"
tauri-plugin-cli = "2.2.0"
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-http = "2.2.0"
tauri-plugin-log = "2.2.0"
tauri-plugin-notification = "2.2.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-process = "2.2.0"
tauri-plugin-single-instance = "2.2.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-upload = "2.2.1"
tauri-plugin-websocket = "2.2.1"

# TODO: Check if needed
# tauri-plugin-shell = "2.0.0-rc.3"

# TODO: (Issue Windows 11)
# tauri-plugin-stronghold = "2.0.0-rc.1"
# error: could not compile `libsodium-sys-stable` (lib) due to 1 previous error

# tauri-plugin-deep-link = "0.1.2"
# ^^^^^^^^^^^^^ use of undeclared crate or module `platform_impl`

# tauri-plugin-sql = "2.0.0-rc.0"
# ^^ use of undeclared type `Db`

# tauri-plugin-positioner = "1.0.5"
# error: failed to select a version for `webkit2gtk-sys`.

# tauri-plugin-persisted-scope = "0.1.3"
# error: failed to select a version for `webkit2gtk-sys`.

# tauri-plugin-localhost = "0.1.0"
# error: failed to select a version for `gtk-sys`.

# tauri-plugin-window-state = "0.1.1"
# error: failed to select a version for `webkit2gtk-sys`.

Echo = { version = "0.0.1", path = "../Echo" }
unbug = { version = "0.4.0" }

[lib]
name = "Mountain"
crate-type = ["lib", "cdylib", "staticlib"]
path = "Source/Library.rs"

[package]
name = "Mountain"
description = "⛰️ Mountain —"
version = "0.0.1"
edition = "2021"
autobenches = false
autobins = false
autoexamples = false
autotests = false
publish = false
default-run = "Mountain"
license-file = "LICENSE"

[features]
default = []
Debug = []
